# pbrt-impl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  start.bat  test.bat
accelerator/: CMakeLists.txt  bvh.cpp  bvh.h  bvh.hpp
app/: CMakeLists.txt  main.cpp
camera/: CMakeLists.txt  camera.cpp  camera.h  perspective.cpp
common/: CMakeLists.txt  common.h  common.hpp  rtti.cpp  rtti.h
example/: example.bat  scene.xml
example/model/: YYB式改变MAGICAL MIRAI 10thVer.1.4.txt
integrator/: CMakeLists.txt  direct.h  integrator.cpp  integrator.h  path.cpp  path.h  sampled_integrator.cpp  sampled_integrator.h
light/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  area_light.cpp  area_light.h  directional_light.cpp  directional_light.h  environment_light.h  light.cpp  light.h  point_light.cpp
math/: CMakeLists.txt  math.cpp  math.h  math.hpp
multithread/: CMakeLists.txt  concurrent_queue.h  dispatcher.cpp  dispatcher.h
sampler/: CMakeLists.txt  halton.cpp  halton.h  sampler.cpp  sampler.h
scene/: CMakeLists.txt  Model.cpp  Model.h  Model.hpp  Scene.cpp  Scene.h  Scene.hpp  Texture.cpp  Texture.h  Texture.hpp  material.cpp  material.h  scene_primitive.cpp  scene_primitive.h
src/: CMakeLists.txt  core.h
src/accelerator/: CMakeLists.txt  bvh.cpp
src/app/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  scene_parser.cpp  scene_parser.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  perspective.cpp  perspective.h
src/common/: CMakeLists.txt  common.cpp  common.h  file.cpp  file.h  str.cpp  str.h
src/integrator/: CMakeLists.txt  integrator.cpp  integrator.h  path.cpp  path.h  sampled_integrator.cpp  sampled_integrator.h
src/light/: CMakeLists.txt  area_light.cpp  area_light.h  directional_light.cpp  environment_light.cpp  light.cpp  light.h  point_light.cpp  point_light.h
src/math/: CMakeLists.txt  math.cpp  math.h
src/multithread/: CMakeLists.txt
src/sampler/: CMakeLists.txt  halton.cpp  halton.h  rng.cpp  rng.h  sampler.cpp
src/scene/: CMakeLists.txt  material.cpp  material.h  model.cpp  model.h  scene.cpp  scene.h  scene_primitive.cpp  scene_primitive.h  texture.cpp  texture.h
test/: CMakeLists.txt  bvh_test.cpp  math_test.cpp  multithread_test.cpp
thrid_party/: CMakeLists.txt
thrid_party/gtest/: CMakeLists.txt
thrid_party/gtest/Debug/: gtest_main.lib
thrid_party/optick/: CMakeLists.txt
thrid_party/stb/: CMakeLists.txt
