add_subdirectory(spdlog)
add_subdirectory(stb)
add_subdirectory(assimp)
add_subdirectory(optick)
add_subdirectory(gtest)
add_subdirectory(mmd)
add_subdirectory(tinyxml2)

message("add ${CMAKE_CURRENT_SOURCE_DIR}/spdlog/include to include directory")
target_include_directories(Alex_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/spdlog/include)
message("add ${CMAKE_CURRENT_SOURCE_DIR}/stb/include to include directory")
target_include_directories(Alex_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/stb/include)
message("add ${CMAKE_CURRENT_SOURCE_DIR}/optick/include to include directory")
target_include_directories(Alex_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/optick/include)
message("add ${CMAKE_CURRENT_SOURCE_DIR}/mmd/include to include directory")
target_include_directories(Alex_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mmd/include)
message("add ${CMAKE_CURRENT_SOURCE_DIR}/tinyxml2 to include directory" )
target_include_directories(Alex_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/tinyxml2)