add_library(optick SHARED IMPORTED GLOBAL) # or STATIC instead of SHARED

set_target_properties(optick PROPERTIES
  IMPORTED_IMPLIB  "${CMAKE_CURRENT_SOURCE_DIR}/OptickCore.lib"
  IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/OptickCore.dll"
  INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
)